compiler-core/src/parse/snapshots/gleam_core__parse__tests__record_trailing_dot_dot_variable.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type Wibble {\n    Wibble(field1: Int, field2: Int)\n}\n\npub fn main() {\n  let wibble = Wibble(1, 2)\n  let wobble = Wibble(field1: 0, ..)\n}\n        "
---
----- SOURCE CODE

pub type Wibble {
    Wibble(field1: Int, field2: Int)
}

pub fn main() {
  let wibble = Wibble(1, 2)
  let wobble = Wibble(field1: 0, ..)
}
        

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:8:34
  │
8 │   let wobble = Wibble(field1: 0, ..)
  │                                  ^^ I was not expecting this

Found `..`, expected one of: 
- `)`
