compiler-core/src/parse/snapshots/gleam_core__parse__tests__record_trailing_update_no_close_paran_const.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type Wibble {\n    Wibble(field1: Int, field2: Int)\n}\n\nconst wibble = Wibble(1, 2)\nconst wobble = Wibble(field1: 0, ..wibble\n\npub fn main() {\n  todo\n}\n        "
---
----- SOURCE CODE

pub type Wibble {
    Wibble(field1: Int, field2: Int)
}

const wibble = Wibble(1, 2)
const wobble = Wibble(field1: 0, ..wibble

pub fn main() {
  todo
}
        

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:9:1
  │
9 │ pub fn main() {
  │ ^^^ I was not expecting this

Found the keyword `pub`, expected one of: 
- `)`
- a constant record argument
